--- a/.github/workflows/flutter_check.yaml
+++ b/.github/workflows/flutter_check.yaml
@@ -14,11 +14,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup Flutter
-        uses: subosito/flutter-action@v2.3.0
+        uses: subosito/flutter-action@v2
         with:
+          channel: stable
           flutter-version: '3.29.2'
+          cache: false
+      - name: Check Flutter Version
+        run: flutter --version
       - name: Clean Flutter build
         run: flutter clean
       - name: Install dependencies
